---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 22. 2. 2020
  Changes:
    - Added changelog file
    - Changed dependency to base 0.18
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 20. 2. 2020
  Changes:
    - Ported to 0.18
    - Renamed mod for upload in mod portal
    - Matched versioning to Factorio versions

  Graphics:
    - Added thumbnail