@@ -1,6 +1,6 @@
 {
     "name": "Gun_Turret_Alerts",
-    "version": "0.18.0",
+    "version": "0.18.1",
     "title": "Gun_Turret_Alerts",
     "author": "Wyrrrd",
     "factorio_version": "0.18",
